# micro-bench

./: logs.txt
cpp/: .gitignore  CMakeLists.txt
cpp/cmake/: common_config_options.cmake  mandelbulb_config.h.in  mandelbulb_options.cmake  set_optimization_flags.cmake
cpp/mandelbulb_animation/: CMakeLists.txt
cpp/mandelbulb_animation/src/: main.cpp
cpp/mandelbulb_baremetal/: .gitignore  CMakeLists.txt
cpp/mandelbulb_baremetal/boot/: CMakeLists.txt  boot_x86.asm
cpp/mandelbulb_baremetal/src/: linker_x86.ld  main.cpp
cpp/mandelbulb_cuda/: CMakeLists.txt
cpp/mandelbulb_cuda/src/: main.cu
cpp/mandelbulb_multithread/: CMakeLists.txt
cpp/mandelbulb_multithread/src/: main.cpp
cpp/mandelbulb_singlethread/: CMakeLists.txt
cpp/mandelbulb_singlethread/src/: main.cpp
cpp/microbenchlib/: CMakeLists.txt
cpp/microbenchlib/includes/: microbench.hpp
cpp/microbenchlib/src/: image.cpp  vector.cpp
cpp/microbenchlib/tests/: image_test.cpp  measure_time_test.cpp  vec3_test.cpp
js/: .gitignore  package-lock.json  package.json
js/lib/: demo.js  index.js  mandelbulblib.js  measure.js  vec3.js
js/test/: demo.test.js  measure.test.js  vec3.test.js
python/: .gitignore  requirements.txt
python/mandelbulb_multithread/: mandelbulb_multithread.py  mandelbulb_multithread_optimized.py
python/mandelbulb_singlethread/: mandelbulb_singlethread.py  mandelbulb_singlethread_optimized.py
swift/: Package.swift
swift/Sources/MandelbulbSinglethread/: main.swift
swift/Sources/MicrobenchLib/: Color.swift  Image.swift  MicrobenchLib.swift  Vec3.swift
swift/Tests/MicrobenchLibTests/: ColorTests.swift  ImageTests.swift  MicrobenchLibTests.swift  Vec3Tests.swift
ts/: .gitignore  .mocharc.json  package-lock.json  package.json  tsconfig.json
ts/lib/: index.ts  mandelbulblib.ts  measure.ts  vec3.ts
ts/test/: measure.test.ts  vec3.test.ts
